src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\PC\Desktop\assignment2\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'.'", "','", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "<INVALID>", "'*'", "<INVALID>", 
                     "'\\'", "<INVALID>", "'+'", "<INVALID>", "'-'", "<INVALID>", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'=/='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "RELATIONALOP", "LOGICALOP", 
                      "ADDINGOP", "MULTIPLYINGOP", "SIGN", "ID", "INTLIT", 
                      "FLOATLIT", "BOOLIT", "STRLIT", "COMMENT", "SEMI", 
                      "COLON", "LB", "RB", "LP", "RP", "LS", "RS", "DOT", 
                      "CM", "BODY", "BREAK", "CONTI", "DO", "ELSE", "ELSEIF", 
                      "EBODY", "EIF", "EFOR", "EWHILE", "FOR", "FUNC", "IF", 
                      "PARAM", "RETURN", "THEN", "VAR", "WHILE", "TRUE", 
                      "FALSE", "ENDDO", "WS", "MUL", "FMUL", "DIV", "FDIV", 
                      "ADD", "FADD", "SUB", "FSUB", "MOL", "NOT", "AND", 
                      "OR", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "NEQF", 
                      "LTF", "GTF", "GTEF", "LTEF", "UNCLOSE_STRING", "ERROR_CHAR", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_many_declaration = 1
    RULE_global_var_declaration_part = 2
    RULE_var_declaration = 3
    RULE_var_list = 4
    RULE_var_list_prime = 5
    RULE_literal = 6
    RULE_arrlit = 7
    RULE_arrlitprime = 8
    RULE_var = 9
    RULE_variable = 10
    RULE_dimensions = 11
    RULE_dimension = 12
    RULE_func_declaration_part = 13
    RULE_func_declaration = 14
    RULE_parameter = 15
    RULE_parameter_list = 16
    RULE_parameter_list_prime = 17
    RULE_body = 18
    RULE_stmt_list = 19
    RULE_stmt = 20
    RULE_assignment_stmt = 21
    RULE_lhs = 22
    RULE_if_stmt = 23
    RULE_elif_block = 24
    RULE_else_block = 25
    RULE_for_stmt = 26
    RULE_while_stmt = 27
    RULE_doWhile_stmt = 28
    RULE_break_stmt = 29
    RULE_continue_stmt = 30
    RULE_call_stmt = 31
    RULE_return_stmt = 32
    RULE_expression_list = 33
    RULE_expression_list_prime = 34
    RULE_expression = 35
    RULE_index_operator = 36

    ruleNames =  [ "program", "many_declaration", "global_var_declaration_part", 
                   "var_declaration", "var_list", "var_list_prime", "literal", 
                   "arrlit", "arrlitprime", "var", "variable", "dimensions", 
                   "dimension", "func_declaration_part", "func_declaration", 
                   "parameter", "parameter_list", "parameter_list_prime", 
                   "body", "stmt_list", "stmt", "assignment_stmt", "lhs", 
                   "if_stmt", "elif_block", "else_block", "for_stmt", "while_stmt", 
                   "doWhile_stmt", "break_stmt", "continue_stmt", "call_stmt", 
                   "return_stmt", "expression_list", "expression_list_prime", 
                   "expression", "index_operator" ]

    EOF = Token.EOF
    T__0=1
    RELATIONALOP=2
    LOGICALOP=3
    ADDINGOP=4
    MULTIPLYINGOP=5
    SIGN=6
    ID=7
    INTLIT=8
    FLOATLIT=9
    BOOLIT=10
    STRLIT=11
    COMMENT=12
    SEMI=13
    COLON=14
    LB=15
    RB=16
    LP=17
    RP=18
    LS=19
    RS=20
    DOT=21
    CM=22
    BODY=23
    BREAK=24
    CONTI=25
    DO=26
    ELSE=27
    ELSEIF=28
    EBODY=29
    EIF=30
    EFOR=31
    EWHILE=32
    FOR=33
    FUNC=34
    IF=35
    PARAM=36
    RETURN=37
    THEN=38
    VAR=39
    WHILE=40
    TRUE=41
    FALSE=42
    ENDDO=43
    WS=44
    MUL=45
    FMUL=46
    DIV=47
    FDIV=48
    ADD=49
    FADD=50
    SUB=51
    FSUB=52
    MOL=53
    NOT=54
    AND=55
    OR=56
    EQ=57
    NEQ=58
    LT=59
    GT=60
    LTE=61
    GTE=62
    NEQF=63
    LTF=64
    GTF=65
    GTEF=66
    LTEF=67
    UNCLOSE_STRING=68
    ERROR_CHAR=69
    ILLEGAL_ESCAPE=70
    UNTERMINATED_COMMENT=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declaration(self):
            return self.getTypedRuleContext(BKITParser.Many_declarationContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.many_declaration()
            self.state = 75
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_var_declaration_part(self):
            return self.getTypedRuleContext(BKITParser.Global_var_declaration_partContext,0)


        def func_declaration_part(self):
            return self.getTypedRuleContext(BKITParser.Func_declaration_partContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_declaration




    def many_declaration(self):

        localctx = BKITParser.Many_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_declaration)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.global_var_declaration_part()
                self.state = 78
                self.func_declaration_part()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.func_declaration_part()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_var_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_global_var_declaration_part




    def global_var_declaration_part(self):

        localctx = BKITParser.Global_var_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_var_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 83
                self.var_declaration()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declaration




    def var_declaration(self):

        localctx = BKITParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(BKITParser.VAR)
            self.state = 90
            self.match(BKITParser.COLON)
            self.state = 91
            self.var_list()
            self.state = 92
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def var_list_prime(self):
            return self.getTypedRuleContext(BKITParser.Var_list_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_list




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_list)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.var()
                self.state = 95
                self.var_list_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_list_primeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def var_list_prime(self):
            return self.getTypedRuleContext(BKITParser.Var_list_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_list_prime




    def var_list_prime(self):

        localctx = BKITParser.Var_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_list_prime)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(BKITParser.CM)
                self.state = 101
                self.var()
                self.state = 102
                self.var_list_prime()
                pass
            elif token in [BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def BOOLIT(self):
            return self.getToken(BKITParser.BOOLIT, 0)

        def STRLIT(self):
            return self.getToken(BKITParser.STRLIT, 0)

        def arrlit(self):
            return self.getTypedRuleContext(BKITParser.ArrlitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(BKITParser.INTLIT)
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.BOOLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.match(BKITParser.BOOLIT)
                pass
            elif token in [BKITParser.STRLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 110
                self.match(BKITParser.STRLIT)
                pass
            elif token in [BKITParser.LP]:
                self.enterOuterAlt(localctx, 5)
                self.state = 111
                self.arrlit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrlitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def arrlitprime(self):
            return self.getTypedRuleContext(BKITParser.ArrlitprimeContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_arrlit




    def arrlit(self):

        localctx = BKITParser.ArrlitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrlit)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(BKITParser.LP)
                self.state = 115
                self.literal()
                self.state = 116
                self.arrlitprime()
                self.state = 117
                self.match(BKITParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(BKITParser.LP)
                self.state = 120
                self.match(BKITParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrlitprimeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def arrlitprime(self):
            return self.getTypedRuleContext(BKITParser.ArrlitprimeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arrlitprime




    def arrlitprime(self):

        localctx = BKITParser.ArrlitprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrlitprime)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(BKITParser.CM)
                self.state = 124
                self.literal()
                self.state = 125
                self.arrlitprime()
                pass
            elif token in [BKITParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.variable()
                self.state = 131
                self.match(BKITParser.T__0)
                self.state = 132
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimensions(self):
            return self.getTypedRuleContext(BKITParser.DimensionsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(BKITParser.ID)
            self.state = 138
            self.dimensions()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def dimensions(self):
            return self.getTypedRuleContext(BKITParser.DimensionsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dimensions




    def dimensions(self):

        localctx = BKITParser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dimensions)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.dimension()
                self.state = 141
                self.dimensions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dimension




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BKITParser.LS)
            self.state = 147
            self.match(BKITParser.INTLIT)
            self.state = 148
            self.match(BKITParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declaration_part




    def func_declaration_part(self):

        localctx = BKITParser.Func_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_func_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNC:
                self.state = 150
                self.func_declaration()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(BKITParser.FUNC, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def parameter(self):
            return self.getTypedRuleContext(BKITParser.ParameterContext,0)


        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declaration




    def func_declaration(self):

        localctx = BKITParser.Func_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_declaration)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(BKITParser.FUNC)
                self.state = 157
                self.match(BKITParser.COLON)
                self.state = 158
                self.match(BKITParser.ID)
                self.state = 159
                self.parameter()
                self.state = 160
                self.body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(BKITParser.FUNC)
                self.state = 163
                self.match(BKITParser.COLON)
                self.state = 164
                self.match(BKITParser.ID)
                self.state = 165
                self.body()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAM(self):
            return self.getToken(BKITParser.PARAM, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(BKITParser.PARAM)
            self.state = 169
            self.match(BKITParser.COLON)
            self.state = 170
            self.parameter_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def parameter_list_prime(self):
            return self.getTypedRuleContext(BKITParser.Parameter_list_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter_list




    def parameter_list(self):

        localctx = BKITParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_parameter_list)
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.variable()
                self.state = 173
                self.parameter_list_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_list_primeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def parameter_list_prime(self):
            return self.getTypedRuleContext(BKITParser.Parameter_list_primeContext,0)

